<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>top.cmarco</groupId>
    <artifactId>LightLogin</artifactId>
    <version>1.1.3-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>LightLogin</name>

    <description>Optimised and Safe SpigotMC Software for Authentication</description>
    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>

                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>com.alessiodp.libby</pattern>
                                    <shadedPattern>top.cmarco.lightlogin.libs.com.alessiodp.libby</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>com.zaxxer.hikari</pattern>
                                    <shadedPattern>top.cmarco.lightlogin.libs.com.zaxxer.hikari</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>org.bouncycastle</pattern>
                                    <shadedPattern>top.cmarco.lightlogin.libs.org.bouncycastle</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>org.postgresql</pattern>
                                    <shadedPattern>top.cmarco.lightlogin.libs.org.postgresql</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>org.eclipse.angus</pattern>
                                    <shadedPattern>top.cmarco.lightlogin.libs.org.eclipse.angus</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>jakarta.mail</pattern>
                                    <shadedPattern>top.cmarco.lightlogin.libs.jakarta.mail</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>jakarta.activation</pattern>
                                    <shadedPattern>top.cmarco.lightlogin.libs.jakarta.activation</shadedPattern>
                                </relocation>

                            </relocations>
                        </configuration>

                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>maven-snapshots</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.eclipse.angus</groupId>
            <artifactId>angus-mail</artifactId>
            <version>2.0.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.17.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <version>1.77</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.19.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.alessiodp.libby</groupId>
            <artifactId>libby-bukkit</artifactId>
            <version>2.0.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
